src/test/deca/syntax/parser/invalid/instance_of_boolean.deca
// Test parser, instanceof doit prendre un IDENT, ici on a un boolean

{
    x instanceof true;
}